syntax = "proto3";

import "model.proto";

option java_package = "org.neo4j.graphalgo.ml.model.proto";
option java_outer_classname = "CommonML";

message MetricScores {
  double avg = 1;
  double max = 2;
  double min = 3;
  oneof params {
    LinkLogisticRegressionTrainConfig linkPredictionParams = 4;
    MultiClassNLRTrainConfig nodeClassificationParams = 5;
  }
}

message InfoMetric {
  double test = 1;
  double outerTrain = 2;

  repeated MetricScores train = 3;
  repeated MetricScores validation = 4;
}

message LinkLogisticRegressionTrainConfig {
  TrainingConfig trainingConfig = 1;

  repeated string featureProperties = 2;
  string linkFeatureCombiner = 3;
  double penalty = 4;
}

message LinkPredictionModelInfo {
  string name = 1;

  LinkLogisticRegressionTrainConfig bestParameters = 2;
  repeated int64 classes = 3;

  map<string, InfoMetric> metrics = 4;

  string type = 5;
}

message MultiClassNLRTrainConfig {
  TrainingConfig trainingConfig = 1;

  repeated string featureProperties = 2;
  string targetProperty = 3;
  double penalty = 4;
}

message NodeClassificationModelInfo {
  string name = 1;

  MultiClassNLRTrainConfig bestParameters = 2;
  repeated int64 classes = 3;

  map<string, InfoMetric> metrics = 4;

  string type = 5;
}
